@@ -42,11 +42,13 @@ bool UserInterfaceManager::handleTouch() {
 	) {
 		if (_swipeEnabled) {
 			_handleSwipeHorizontal(x);
+			_handleSwipeVertical(y);
 		}
 		return true;
 	}
 
 	_stopSwipeHandlerHorizontal();
+	_stopSwipeHandlerVertical();
 	return false;
 }
 
@@ -72,11 +74,10 @@ void UserInterfaceManager::_handleSwipeHorizontal(uint x) {
 			_stopSwipeHandlerHorizontal();
 		}
 	}
-	if (_swipeCounterHorizontal == 3) {
+	if (_swipeCounterHorizontal == 4) {
 		MainScreen::getInstance()->handleSwipeHorizontal(
 			_swipeVectorHorizontal == VECTOR_LEFT ? -1 : 1
 		);
-		//TO-DO: handle swipe
 	}
 }
 
@@ -84,6 +85,47 @@ void UserInterfaceManager::_stopSwipeHandlerHorizontal() {
 	_swipeCounterHorizontal = 0;
 	_swipeLastX = 0;
 	_swipeVectorHorizontal = 0;
+	if (Display::getInstance()->isDisplayOn()) {
+		_swipeEnabled = true;
+	} else {
+		_swipeEnabled = false;
+	}
+}
+
+
+void UserInterfaceManager::_handleSwipeVertical(uint y) {
+	if (_swipeVectorVertical == 0) {
+		if (_swipeLastY == 0) {
+			_swipeLastY = 0 + y;
+		} else {
+			if (_swipeLastY < y) {
+				_swipeVectorVertical = VECTOR_DOWN;
+			 } else {
+				_swipeVectorVertical = VECTOR_UP;
+			}
+		}
+	} else {
+
+		if (
+			(_swipeVectorVertical == VECTOR_UP && _swipeLastY > y)
+			|| (_swipeVectorVertical == VECTOR_DOWN &&  _swipeLastY < y)
+		) {
+			_swipeCounterVertical++;
+		} else {
+			_stopSwipeHandlerVertical();
+		}
+	}
+	if (_swipeCounterVertical == 3) {
+		MainScreen::getInstance()->handleSwipeVertical(
+			_swipeVectorVertical == VECTOR_UP ? -1 : 1
+		);
+	}
+}
+
+void UserInterfaceManager::_stopSwipeHandlerVertical() {
+	_swipeCounterVertical = 0;
+	_swipeLastY = 0;
+	_swipeVectorVertical = 0;
 	if (Display::getInstance()->isDisplayOn()) {
 		_swipeEnabled = true;
 	} else {
