@@ -18,9 +18,16 @@ class UserInterfaceManager {
 
 			const uint8_t VECTOR_LEFT = 1;
 			const uint8_t VECTOR_RIGHT = 2;
+			const uint8_t VECTOR_UP = 1;
+			const uint8_t VECTOR_DOWN = 2;
+
 			uint16_t _swipeLastX = 0;
 			uint8_t _swipeCounterHorizontal = 0;
 			int8_t _swipeVectorHorizontal = 0;
+
+			uint16_t _swipeLastY = 0;
+			uint8_t _swipeCounterVertical = 0;
+			int8_t _swipeVectorVertical = 0;
 
 			bool _swipeEnabled = false;
 
@@ -33,5 +40,9 @@ class UserInterfaceManager {
 			void _stopSwipeHandlerHorizontal();
 
 			void _handleSwipeHorizontal(uint x);
+
+			void _stopSwipeHandlerVertical();
+
+			void _handleSwipeVertical(uint y);
 
 };
